--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,19 +47,6 @@ header {
     color: #555555;
 }
 
-.logo-name {
-    
-    font-size: 500%;
-    margin-left: 100px;
-}
-.logo-desc{
-
-    letter-spacing: 1px;
-    font-size: 150%;
-    margin-left: 130px;
-    top: 300px;
-    float: left;
-}
 #nav-menu{
      font-size: 90%;
     list-style-type: none;
@@ -80,3 +67,166 @@ header {
 }
 
 
+
+/* Navbar */
+
+
+
+.navbar {
+    margin-bottom: 0;
+    width: 100%;
+    background-color: white;
+    border: 0;
+    
+}
+
+.navbar .navbar-toggler {
+    border: 0;
+}
+
+.navbar-brand h1{
+      font-size: 500%;
+    margin-left: 25px;
+}
+
+.navbar-brand h2{
+      letter-spacing: 1px;
+    font-size: 150%;
+    margin-left: 50px;
+  
+}
+
+/*----------------------------------------Home image*/
+
+#image-rossini{
+    height:100%;
+    width: 100%;
+    background: url("../images/rossini rest1.png") no-repeat center center;
+    animation-name: hero-zoom;
+    animation-duration: 4s;
+    animation-fill-mode: forwards;
+     z-index: -1;
+}
+
+#home-image{
+    height:800px;
+    width: 100%;
+    overflow: hidden;
+    
+    z-index: -1;
+}
+@keyframes hero-zoom {
+    from{
+        transform: scale(0.8);
+    }
+    to{
+        transform: scale(0.9);
+    }
+}
+
+
+/*----------------------------------------Web alert*/
+.web-info {
+    text-align: center;
+    
+    background-color: rgba(243, 236, 141, 1);
+    border-color:rgba(243, 236, 141, 1);
+    padding: 5px 15px;
+    margin-bottom: 0;
+    border: 1px solid transparent;
+    border-radius: 0;
+
+}
+.web-info span {
+    text-align: center;
+    font-size: 100%;
+    text-transform: uppercase;
+    animation:blinkingText 1.2s infinite;
+}
+@keyframes blinkingText{
+    0%{     color: red;    }
+    49%{    color: red; }
+    60%{    color: transparent; }
+    99%{    color:transparent;  }
+    100%{   color: #000;    }
+}
+
+
+/*----------------------------------------about-me*/
+
+#about-me{
+    height: 300px;
+    margin: 3px 0;
+    text-align: center;
+    font-size: 100%;
+    color: #555555;
+    top: -90px;
+    position: relative;
+    padding: 5px 15px;
+    margin-bottom: 0;
+    border: 1px solid transparent;
+}
+
+#name{
+     font-size: 250%;
+    color: #555555;
+}
+
+#about-me p{
+    width: 80%;
+    text-align: center;
+    margin-left: 10%;
+}
+
+/*----------------------------------------menu jpeg / h2 */
+
+#menu {
+	padding: 1rem 0;
+	margin-bottom: 100px;
+    background: url("../images/fish.jpg") center center / cover no-repeat fixed;     
+}
+
+#menu h2{
+     text-align: center;
+}
+
+
+
+/*---------------First course */
+
+ul li{
+list-style-type: none;
+}
+
+.first-course {
+    text-align: center;
+    margin-bottom: 5rem;
+    background-color: rgba(243, 236, 141, 0.9);
+    margin-top: 5rem;
+    margin-left: 5rem;
+    margin-bottom: 5rem;
+    margin-right: 5rem;
+}
+
+.first-course-style i {
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height: 15px;
+}
+
+.first-course h2{
+    text-align: center;
+    
+}
+.first-course-container {
+    
+    border-color: #e4d797;
+    padding: 5px 15px;
+    margin-bottom: 0;
+    border: 1px solid transparent;
+    border-radius: 0;
+
+}
+.center {
+margin: auto;
+}
