--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,7 @@ header {
     }
 }
 
-
+/*----------------------------------------Web alert*/
 /*----------------------------------------Web alert*/
 .web-info {
     text-align: center;
