--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,11 @@ h1, h2, h3, h4{
     color: #555555;
 }
 
+
+h3{
+    text-align: center;
+}
+
 h4 {
     font-size: 100%;
     color: #555555;
@@ -46,7 +51,7 @@ header {
 }
 
 #nav-menu{
-     font-size: 100%;
+    font-size: 100%;
     list-style-type: none;
     letter-spacing: 3px;
 }
@@ -82,7 +87,7 @@ header {
 }
 
 .navbar-brand h1{
-      font-size: 400%;
+    font-size: 400%;
     margin-left: 25px;
     margin-bottom: 0px;
 
@@ -105,15 +110,15 @@ header {
     animation-name: hero-zoom;
     animation-duration: 4s;
     animation-fill-mode: forwards;
-     z-index: -1;
+    
 }
 
 #home-image{
     height:800px;
     width: 100%;
     overflow: hidden;
+    position: relative;
     
-    z-index: -1;
 }
 @keyframes hero-zoom {
     from{
@@ -125,7 +130,7 @@ header {
 }
 
 /*----------------------------------------Web alert*/
-/*----------------------------------------Web alert*/
+
 .web-info {
     text-align: center;
     
@@ -190,8 +195,8 @@ header {
     margin-left: 0rem;
     margin-bottom: 0rem;
     margin-right: 0rem;
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     padding-left: 80px;
     padding-right: 80px;
 }
@@ -200,7 +205,7 @@ header {
 .menu-style {
     background-color: khaki;
     opacity: 90%; 
-    padding-top: 15px; 
+    padding-top: 50px; 
     
 }
 
@@ -265,8 +270,6 @@ text-align: center;
 }
 
 
-
-
 /*---------------reviews-------------------------------------*/
 
 #reviews{
@@ -276,21 +279,31 @@ text-align: center;
     background-position: center;
     width: 100%;
     overflow: hidden;
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 #reviews div {
     color: #555555;
     background-color: rgba(250, 248, 248, 0.8);
     width: 33%;
-    height: 300px;
+    height: 100%;
     float: left;
-    padding: 30px 0 0 10px;
+    padding-top: 10px;
     text-align: center;
-    margin: 2px;
 }
 
 #reviews h2 {
      color: #555555;
+     text-align: center;
+  
+}
+
+@media screen and (max-width:800px) {
+#reviews div {
+    width: 100%;
+    margin: 0px;
+}
 }
 
 
@@ -298,7 +311,7 @@ text-align: center;
 #rossini-contact {
 	
 	margin-bottom: 10px;
-    background: url("../images/beach2.jpg") center center / cover no-repeat fixed;    
+    background: url("../images/beach2.jpg") center center / cover no-repeat fixed;  
     
     text-align: center;
     margin-bottom: 0rem;
@@ -308,7 +321,7 @@ text-align: center;
     margin-bottom: 0.7rem;
     margin-right: 0rem; 
      color: white;
-     height: 400px;
+     height: 100%;
 
 }
 #rossini-contact h1 {
@@ -350,6 +363,7 @@ list-style-type: none;
 
     height: 200px;
     margin-bottom: 10px;
+    
 }
 
 #rossini-map {
