--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,18 +258,16 @@ text-align: center;
 }
 
 /*---------------gallery-------------------------------------*/
-#photo {
-    clear: both;
-    line-height: 0;
-    column-count: 4;
-    column-gap: 0px;     
-}
 
-#photo img{
+ 
+  .carousel-inner img {
     width: 100%;
+    height: 100%;
+  }
+
+.container {
+margin-top: 0px;
 }
-
-
 /*---------------reviews-------------------------------------*/
 
 #reviews{
